Fix: Restrict scrollbars in the single column view only

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Mastodon Bird UI by @rolle@mementomori.social
-   1.3.9rc2 */
+   1.3.9rc3 */
 
 /* CSS variables */
 :root {
@@ -3110,39 +3110,39 @@ body.embed .entry .detailed-status {
 }
 
 /* Scrollbars */
-::-webkit-scrollbar {
+.layout-single-column ::-webkit-scrollbar {
   height: 4px;
   width: 4px;
 }
 
-::-webkit-scrollbar-thumb {
+.layout-single-column ::-webkit-scrollbar-thumb {
   background-color: var(--color-border);
   border: 0px solid var(--color-border);
   border-radius: 50px;
 }
 
-::-webkit-scrollbar-thumb:hover {
+.layout-single-column ::-webkit-scrollbar-thumb:hover {
   background-color: var(--color-light-purple);
 }
 
-::-webkit-scrollbar-thumb:active {
+.layout-single-column ::-webkit-scrollbar-thumb:active {
   background-color: var(--color-bg);
 }
 
-::-webkit-scrollbar-track {
+.layout-single-column ::-webkit-scrollbar-track {
   background-color: var(--color-bg);
   border: 0px solid var(--color-border);
   border-radius: 0;
 }
 
-::-webkit-scrollbar-track:hover {
+.layout-single-column ::-webkit-scrollbar-track:hover {
   background-color: var(--color-bg);
 }
 
-::-webkit-scrollbar-track:active {
+.layout-single-column ::-webkit-scrollbar-track:active {
   background-color: var(--color-bg);
 }
 
-::-webkit-scrollbar-corner {
+.layout-single-column ::-webkit-scrollbar-corner {
   background-color: transparent;
 }
